Fixed Bugs