@@ -1,2 +1,8 @@
 # osdl-project
 Volt Charge
+
+Compile:
+javac --module-path "javafx-sdk-21.0.10\lib" --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web -cp "sqlite-jdbc.jar;." *.java
+
+Run:
+java --module-path "javafx-sdk-21.0.10\lib" --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web -cp "sqlite-jdbc.jar;." Login
